--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -3085,10 +3085,19 @@ body[class*="nitf"] #content #viewlet-social-like .sociallike-network-twitter if
 
 /* parágrado da notícia */
 body[class*="nitf"] #content article div[property*="articleBody"] p {
-	font-size: 1.1em;
-	font-family: Arial, Helvetica, sans-serif;
-	line-height: 21px;
-	color: #172938;
+    font-size: 1.1em;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 21px;
+    color: #172938;
+}
+
+/* subtítulo da notícia */
+#content article .documentDescription {
+    font-size: 1.3em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;;
+    color: #172938;
+    margin: 1em 0 0;
 }
 
 /* nitf fonte da notícia */
