--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -620,10 +620,17 @@ input.searchField {
 
 #content h1.documentFirstHeading {
 	margin: 5px 0;
+	border-bottom: 1px solid #d7dcd8;
 	font-size: 3em;
 	color: #1a2a39;
 	text-transform: none;
 	padding-bottom: 0.4em;
+}
+
+h2.nitfSubtitle {
+	color: #2c67cd !important;
+	margin: 0 !important;
+	font-size: 1em;
 }
 
 p.section {
@@ -874,7 +881,7 @@ fieldset#folder-listing legend {
 
 /* portlets */
 dl.portlet {
-	margin-bottom: 0;
+	margin-bottom: 2em;
 }
 
 dl.portlet dt.hiddenStructure {
@@ -916,23 +923,6 @@ dl.portlet dt {
 dl.portlet dt a:link,
 dl.portlet dt a:visited {
 	color: #464a55 !important;
-}
-
-#portal-column-two > .portletWrapper > .portletStaticText p {
-    margin: 0;
-}
-#portal-column-two > .portletWrapper > .portletStaticText a,
-#portal-column-two > .portletWrapper > .portletStaticText img {
-    display: block;
-}
-#portal-column-two > .portletWrapper > .portletStaticText p {
-    margin: 0;
-}
-#portal-column-two > .portletWrapper:first-child {
-    margin-top: 1.7307em;
-}
-#portal-column-two > .portletWrapper {
-    margin-bottom: 1.9230em;
 }
 
 /* portlet de login */
@@ -3058,7 +3048,7 @@ ul.formTabs {
 body[class*="nitf"] #content p.section {
     font-size: 16px;
     font-family: 'open_sanssemibold', Arial, Helvetica, sans-serif;
-    margin-bottom: 1.5em !important;
+    margin-bottom: 20px !important;
     text-transform: uppercase;
     letter-spacing: normal;
 }
@@ -3067,22 +3057,9 @@ body[class*="nitf"] #content p.section {
 body[class*="nitf"] #content h1.documentFirstHeading {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 2.5833em;
-    line-height: 1.1788em;
+    font-size: 34px;
+    line-height: 38px;
     letter-spacing: normal;
-    padding-bottom: 0;
-    margin-bottom: 0.7444em;
-}
-body[class*="nitf"] #content h2.nitfSubtitle {
-    margin-bottom: 1.9230em;
-	color: #2c67cd !important;
-	font-size: 1em;
-}
-
-body[class*="nitf"] #content .documentDescription {
-    margin-top: 0;
-    padding-bottom: 1.5390em;
-    border-bottom: 1px solid #d7dcd8;
 }
 
 /* social like */
