--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -154,8 +154,8 @@ p {
 
 /* Tamanho das colunas  */
 #portal-column-two {
-	width: 24.75%;
-	margin-left: -24.75%;
+	width: 24.0625%;
+	margin-left: -24.0625%;
 }
 
 #portal-column-one {
@@ -164,11 +164,11 @@ p {
 }
 
 div.width-1\3a 2 {
-	width: 52.75%;
+	width: 51.25%;
 }
 
 div.position-1\3a 4 {
-	margin-left: -79.875%;
+	margin-left: -78.2291%;
 }
 
 div.width-3\3a 4 {
@@ -569,7 +569,7 @@ input.searchField {
 
 #content div.newsLeftPane {
 	float: left;
-	margin: 0.5em 1em 0.5em 0;
+	margin: 0.9615em 1em 0.5em 0;
 	position: relative;
 }
 
@@ -585,6 +585,7 @@ input.searchField {
 	font-weight: normal;
 	font-size: 1em;
 	top: 0;
+    line-height: 1.36340em;
 }
 
 /* Text styles */
@@ -651,7 +652,7 @@ p.section a {
 	right: 10px;
 	float: right;
 	margin: 0 0 15px 0;
-	padding: 5px 0 0 20px;
+	padding: 0.6416em 0 0 1.3634em;
 	width: 40%;
 	border-left: 1px dotted #bfc0c2;
 }
@@ -661,9 +662,12 @@ p.section a {
 }
 
 /* correção dos tamanhos quando 4 colunas */
-div.width-1\3a 2 #viewlet-social-like { width: 58%; }
+div.width-1\3a 2 #viewlet-social-like {
+    width: 25.0794%;
+    top: -1.041em;
+}
 
-div.width-1\3a 2 #plone-document-byline { width: 35%; }
+div.width-1\3a 2 #plone-document-byline { width: 68.7216%; }
 
 .portaltype-collection #viewlet-social-like {
 	top: -6px;
@@ -2660,8 +2664,7 @@ ul.social-tabs.css-tabs>li>a {
 
 #viewlet-social-like>div {
     display: block;
-    float: right;
-    margin-left: 3px;
+    margin-bottom: 0.6410em;
 }
 
 /* celular  */
@@ -3085,6 +3088,25 @@ body[class*="nitf"] #content .documentDescription {
     border-bottom: 1px solid #d7dcd8;
 }
 
+body[class*="nitf"] #content .documentAuthor,
+body[class*="nitf"] #content .documentPublished,
+body[class*="nitf"] #content .documentModified {
+    display: block;
+}
+body[class*="nitf"] #content .documentAuthor {
+    margin-top: 1.1312em;
+    margin-bottom: 0.6598em;
+}
+body[class*="nitf"] #content .documentPublished > span:first-child,
+body[class*="nitf"] #content .documentModified > span:first-child {
+    display: block;
+    float: left;
+}
+body[class*="nitf"] #content .documentPublished > span:first-letter,
+body[class*="nitf"] #content .documentModified > span:first-letter {
+    text-transform: uppercase;
+}
+
 /* social like */
 body[class*="nitf"] #content #viewlet-social-like { right: 0 !important; }
 body[class*="nitf"] #content #viewlet-social-like > div { text-align: right; }
@@ -3099,4 +3121,5 @@ body[class*="nitf"] #content article div[property*="articleBody"] p {
 	font-family: Arial, Helvetica, sans-serif;
 	line-height: 20px;
 	color: #172938;
+    margin-bottom: 1.5em;
 }
