--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -586,6 +586,7 @@ input.searchField {
     font-size: .85em;
 	top: 0;
     line-height: 1.36340em;
+    margin-top: .400em;
 }
 
 /* Text styles */
@@ -796,16 +797,16 @@ table.listing tbody th {
 #content #newsRelatedItems {
     background-color: #eeeff1;
     clear: both;
-    margin: 0;
+    margin: 1.4em 0 .100em 0;
     padding: 0;
     border: 1px solid #c0c1c3;
     border-radius: 3px;
     font-size: 16px; /* root size */
+    width: 228px;
 }
 
 #content .newsRelatedItems fieldset,
 #content #newsRelatedItems fieldset {
-    background-color: none;
     border: 0 none;
     padding: 0;
     margin: 0;
@@ -814,7 +815,6 @@ table.listing tbody th {
 
 #content .newsRelatedItems legend,
 #content #newsRelatedItems legend {
-    display: block;
     font-size: 1em;
     line-height: 1em;
     font-family: 'open_sansbold', Arial, Helvetica, sans-serif;
@@ -822,6 +822,8 @@ table.listing tbody th {
     color: #454545;
     margin: 0;
     padding: .600em 0 .600em .875em;
+    float: left;
+    clear: both;
 }
 
 #content #form-widgets-relatedItems {
@@ -836,12 +838,12 @@ table.listing tbody th {
 #content #form-widgets-relatedItems div {
     clear: both;
     border-top: 1px dotted #c0c1c3;
-    line-height: 2.800em;
 } #content #form-widgets-relatedItems div:first-child { border-top: 0 none; }
 
 #content #form-widgets-relatedItems div a {
     color: #335277;
-    padding: 0 1em;
+    margin: .500em 1em;
+    float: left;
 }
 
 
@@ -3133,20 +3135,23 @@ body[class*="nitf"] #content .documentPublished,
 body[class*="nitf"] #content .documentModified {
     display: block;
 }
+
 body[class*="nitf"] #content .documentAuthor {
     margin-top: 1.1312em;
     margin-bottom: 0.6598em;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 1.1em;
     color: #2c66ce;
-    line-height: 1.7em;
+    line-height: 1.6em;
 }
+
 body[class*="nitf"] #content .documentPublished > span:first-child,
 body[class*="nitf"] #content .documentModified > span:first-child {
     display: block;
     float: left;
 }
+
 body[class*="nitf"] #content .documentPublished > span:first-letter,
 body[class*="nitf"] #content .documentModified > span:first-letter {
     text-transform: uppercase;
@@ -3158,10 +3163,12 @@ body[class*="nitf"] #content #viewlet-social-like > div {
     text-align: right;
     height: 20px;
 }
+
 body[class*="nitf"] #content #viewlet-social-like .sociallike-network-facebook {
     width: 90px;
     padding-left: 2px;
 }
+
 body[class*="nitf"] #content #viewlet-social-like .sociallike-network-gplus    { width: 78px; }
 body[class*="nitf"] #content #viewlet-social-like .sociallike-network-twitter  { width: 93px; }
 body[class*="nitf"] #content #viewlet-social-like .sociallike-network-twitter iframe { margin-left: 0; }
@@ -3170,7 +3177,7 @@ body[class*="nitf"] #content #viewlet-social-like .sociallike-network-twitter if
 body[class*="nitf"] #content article div[property*="articleBody"] p {
     font-size: 1.1em;
     font-family: Arial, Helvetica, sans-serif;
-    line-height: 21px;
+    line-height: 1.6em;
     color: #172938;
     margin-bottom: 1.5em;
 }
