--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -3135,3 +3135,56 @@ body[class*="nitf"] #content article div[property*="articleBody"] p {
     font-size: 1.1em;
     color: #2c66ce;
 }
+
+
+/**
+ * Listagem do tile collection
+ */
+body[class*="collection"] #viewlet-below-content-title { display: none; }
+
+body[class*="collection"] #content h1.documentFirstHeading {
+    margin: 0;
+    padding:0;
+    border-bottom: 1px solid #d9dbda;
+    font-size: 2.333em;
+    font-family: "open_sansbold", Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    color: #2c66ce;
+    text-transform: uppercase;
+}
+
+body[class*="collection"] #content .subtitle {
+    font-family: "open_sansregular", Arial, Helvetica, sans-serif;
+    font-size: .900em;
+    font-weight: normal;
+}
+
+body[class*="collection"] #content .tileHeadline {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.250em;
+    font-weight: bold;
+    color: #172938;
+    line-height: 1.350em;
+}
+
+body[class*="collection"] #content .description {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    color: #172938;
+    line-height: 1.170em;
+}
+
+body[class*="collection"] #content .tileItem .keywords {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    line-height: 1.290em;
+}
+
+body[class*="collection"] #content .tileItem .keywords,
+body[class*="collection"] #content .tileItem .keywords span a,
+body[class*="collection"] #content .tileItem .documentByLine { color: #596e7f; }
+
+body[class*="collection"] #content .tileItem .documentByLine {
+    font-family: "open_sansregular", Arial, Helvetica, sans-serif;
+    font-size: 12px;
+}
