--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1429,7 +1429,7 @@ dl.portlet ul.navTreeLevel6 li a {
 /* Tiles */
 
 .tile {
-	margin-bottom: 24px;
+	margin-bottom: 45px;
 	clear: both;
 }
 
@@ -1446,11 +1446,11 @@ dl.portlet ul.navTreeLevel6 li a {
 }
 
 .tile h2 {
-	font-family: 'open_sansregular', Arial, Helvetica, sans-serif;
-	font-size: 14px;
-	line-height: 1.2em;
-	margin: 0;
-	margin-bottom: 0;
+    margin: 0;
+    margin-bottom: 0;
+    font-size: 1.15em;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.2em;
 }
 
 #content .cover-collection-tile h2 {
@@ -1481,6 +1481,7 @@ dl.portlet ul.navTreeLevel6 li a {
 	font-weight: normal;
 	margin-bottom: 3px !important;
 	text-transform: uppercase;
+    font-size: 0.9em;
 }
 
 .link-externo {
@@ -1829,9 +1830,8 @@ dl.portlet ul.navTreeLevel6 li a {
 .outstanding-header .outstanding-title {
 	color: #2C67CD;
 	font-size: 1.7em;
-	padding: 7px 0;
+	padding: 0.45em;
 	margin-left: 0 !important;
-	padding-left: 0.3em;
 	border-bottom: 1px solid #CCCCCC;
 	border-top: 2px solid #172838;
 }
@@ -1848,7 +1848,7 @@ dl.portlet ul.navTreeLevel6 li a {
 }
 
 .outstanding-header h2 {
-	font-size: 1.8em !important;
+	font-size: 2.28em !important;
 	min-height: 48px;
 }
 
@@ -2539,7 +2539,7 @@ dl.portlet div.listingBar a:link {
 /****************** FOOTER ******************/
 
 #voltar-topo {
-	margin-top: 44px;
+	margin-top: 30px;
 	text-align: right;
 }
 
