--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -3239,15 +3239,15 @@ body[class*="collection"] #content .summary-view-icon {
 
 body[class*="collection"] #content .summary-view-icon .icon-day { background-position: -244px -392px; }
 body[class*="collection"] #content .summary-view-icon .icon-hour { background-position: -273px -393px; }
-body[class*="collection"] #content .summary-view-icon .icon-audio { background-position: -3px -393px; }
-body[class*="collection"] #content .summary-view-icon .icon-video { background-position: -33px -391px; }
+body[class*="collection"] #content .summary-view-icon .icon-audio { background-position: -3px -391px; }
+body[class*="collection"] #content .summary-view-icon .icon-multimidia { background-position: -33px -391px; }
 body[class*="collection"] #content .summary-view-icon .icon-info { background-position: -63px -391px; }
 body[class*="collection"] #content .summary-view-icon .icon-gallery { background-position: -303px -391px; }
 body[class*="collection"] #content .summary-view-icon .icon-edit { background-position: -93px -391px; }
 body[class*="collection"] #content .summary-view-icon .icon-app { background-position: -155px -392px; }
-body[class*="collection"] #content .summary-view-icon .icon-photo { background-position: -123px -391px; }
+body[class*="collection"] #content .summary-view-icon .icon-image { background-position: -123px -391px; }
 body[class*="collection"] #content .summary-view-icon .icon-gallery,
-body[class*="collection"] #content .summary-view-icon .icon-photo {
+body[class*="collection"] #content .summary-view-icon .icon-image {
     width: 15px;
     margin-right: 2px;
 }
@@ -3256,12 +3256,12 @@ body[class*="collection"] #content .summary-view-icon .icon-photo {
  * icones - beaseado na semantica do font awesome*/
 body[class*="collection"].contraste #content .summary-view-icon .icon-day { background-position: -624px -392px; }
 body[class*="collection"].contraste #content .summary-view-icon .icon-hour { background-position: -653px -393px; }
-body[class*="collection"].contraste #content .summary-view-icon .icon-audio { background-position: -383px -393px; }
-body[class*="collection"].contraste #content .summary-view-icon .icon-video { background-position: -413px -391px; }
+body[class*="collection"].contraste #content .summary-view-icon .icon-audio { background-position: -383px -391px; }
+body[class*="collection"].contraste #content .summary-view-icon .icon-multimidia { background-position: -413px -391px; }
 body[class*="collection"].contraste #content .summary-view-icon .icon-info { background-position: -443px -391px; }
 body[class*="collection"].contraste #content .summary-view-icon .icon-gallery { background-position: -683px -391px; }
 body[class*="collection"].contraste #content .summary-view-icon .icon-edit { background-position: -473px -391px; }
-body[class*="collection"].contraste #content .summary-view-icon .icon-photo { background-position: -503px -391px; }
+body[class*="collection"].contraste #content .summary-view-icon .icon-image { background-position: -503px -391px; }
 body[class*="collection"].contraste #content .summary-view-icon .icon-app { background-position: -535px -392px; }
 
 body[class*="collection"].contraste #content .description,
