--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -658,12 +658,18 @@ p.section a {
 }
 
 /* correção dos tamanhos quando 4 colunas */
-div.width-1\3a 2 #viewlet-social-like {
+div.width-1\3a 2 #viewlet-social-like { width: 58%; }
+
+body[class*="nitf"] div.width-1\3a 2 #viewlet-social-like {
     width: 25.0794%;
     top: -1.041em;
 }
 
-div.width-1\3a 2 #plone-document-byline { width: 68.7216%; }
+div.width-1\3a 2 #plone-document-byline {
+    width: 35%;
+}
+
+body[class*="nitf"] div.width-1\3a 2 #plone-document-byline { width: 68.7216%; }
 
 .portaltype-collection #viewlet-social-like {
 	top: -6px;
@@ -2697,6 +2703,12 @@ ul.social-tabs.css-tabs>li>a {
 /* Correção largura tile de redes sociais */
 
 #viewlet-social-like>div {
+     display: block;
+     float: right;
+-    margin-left: 3px;
+}
+
+body[class*="nitf"] #viewlet-social-like>div {
     display: block;
     margin-bottom: 0.6410em;
 }
@@ -3138,8 +3150,7 @@ body[class*="nitf"] #content .documentModified {
 }
 
 body[class*="nitf"] #content .documentAuthor {
-    margin-top: 1.1312em;
-    margin-bottom: 0.6598em;
+    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 1.1em;
@@ -3159,7 +3170,11 @@ body[class*="nitf"] #content .documentModified > span:first-letter {
 }
 
 /* social like */
-body[class*="nitf"] #content #viewlet-social-like { right: 0 !important; }
+body[class*="nitf"] #plone-document-byline { padding-top: .600em; }
+body[class*="nitf"] #content #viewlet-social-like {
+    right: 0 !important;
+    position: static;
+}
 body[class*="nitf"] #content #viewlet-social-like > div {
     text-align: right;
     height: 20px;
@@ -3198,3 +3213,5 @@ body[class*="nitf"] #content article div[property*="articleBody"] p {
     font-size: 1.1em;
     color: #2c66ce;
 }
+
+/* nitf - redes sociais */
