remoção de caracteres errados

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1472,7 +1472,7 @@ dl.portlet ul.navTreeLevel6 li a {
 }
 
 .tile.fio-separador {
-	margin-bottom: 2.4em;g s
+	margin-bottom: 2.4em;
 }
 
 .tile .tile-subtitle {
